# crrc_msgs

src/art_emergency_msgs/: CMakeLists.txt  package.xml
src/art_emergency_msgs/msg/: ArtEmergencyCmd.msg
src/art_interface_msg/: CMakeLists.txt  package.xml
src/art_interface_msg/msg/: ArtLifeSignal.msg  ArtStatus.msg  ControlCommand.msg
src/autoware_planning_msgs/msg/: TrajectoryPoint.msg
src/crrc_api_msgs/: CMakeLists.txt  package.xml
src/crrc_api_msgs/msg/: AwapiCrrcpilotStatus.msg  AwapiVehicleStatus.msg  LaneChangeStatus.msg  ObstacleAvoidanceStatus.msg
src/crrc_auto_msgs_converter/: CMakeLists.txt  package.xml
src/crrc_auto_msgs_converter/include/crrc_auto_msgs_converter/: crrc_auto_msgs_converter.hpp
src/crrc_control_msgs/: CMakeLists.txt  package.xml
src/crrc_control_msgs/srv/: ExternalCommandSelect.srv  SetPause.srv  SetStop.srv
src/crrc_debug_msgs/: CMakeLists.txt  package.xml
src/crrc_debug_msgs/msg/: Float32MultiArrayStamped.msg  Float64MultiArrayStamped.msg  Int32MultiArrayStamped.msg  Int64MultiArrayStamped.msg  MultiArrayLayout.msg
src/crrc_external_api_msgs/: CMakeLists.txt  package.xml
src/crrc_external_api_msgs/msg/: CalibrationStatusArray.msg  ControlCommandStamped.msg  FailSafeStateStamped.msg  GearShiftStamped.msg  LocalizationScoreArray.msg  Route.msg  TurnSignalStamped.msg  VehicleCommandStamped.msg  VehicleStatus.msg  VehicleStatusStamped.msg
src/crrc_external_api_msgs/srv/: ClearRoute.srv  Engage.srv  GetMetadataPackages.srv  GetRosbagCopyList.srv  GetTextFile.srv  InitializePose.srv  PauseDriving.srv  SetDoor.srv  SetEmergency.srv  SetObserver.srv  SetOperator.srv  SetPose.srv  SetRosbagLoggingMode.srv  SetRosbagRecord.srv  SetRoute.srv  SetService.srv  SetVelocityLimit.srv
src/crrc_hmi_msgs/: CMakeLists.txt  package.xml
src/crrc_hmi_msgs/srv/: Announce.srv  SetVolume.srv
src/crrc_localization_msgs/: CMakeLists.txt  package.xml
src/crrc_localization_msgs/srv/: InitializeLocalization.srv
src/crrc_map_msgs/: CMakeLists.txt  package.xml
src/crrc_map_msgs/msg/: MapProjectorInfo.msg
src/crrc_msgs/: CMakeLists.txt  package.xml
src/crrc_msgs/src/: crrc_msgs.cpp
src/crrc_perception_msgs/: CMakeLists.txt  package.xml
src/crrc_planning_msgs/: CMakeLists.txt  package.xml
src/crrc_planning_msgs/msg/: AvoidanceDebugMsgArray.msg  LaneChangeDebugMsgArray.msg  Path.msg  PathChangeModule.msg  PathChangeModuleArray.msg  PathPointWithLaneId.msg  PathWithLaneId.msg  StopReason.msg  StopReasonArray.msg  Trajectory.msg  VelocityLimit.msg
src/crrc_planning_msgs/srv/: ClearRoute.srv  SetLaneletRoute.srv  SetWaypointRoute.srv
src/crrc_rtc_msgs/: CMakeLists.txt  README.md  package.xml
src/crrc_rtc_msgs/msg/: AutoModeStatusArray.msg  CooperateCommand.msg  CooperateResponse.msg  CooperateStatus.msg  CooperateStatusArray.msg
src/crrc_rtc_msgs/srv/: AutoModeWithModule.srv  CooperateCommands.srv
src/crrc_simulation_msgs/: CMakeLists.txt  package.xml
src/crrc_simulation_msgs/msg/: SimulationEvents.msg  UserDefinedValue.msg
src/crrc_system_msgs/: CMakeLists.txt  README.md  package.xml
src/crrc_system_msgs/msg/: DiagGraphStatus.msg  DiagGraphStruct.msg  DiagnosticGraph.msg  DiagnosticNode.msg  EmergencyStateStamped.msg  HazardStatusStamped.msg  OperationModeAvailability.msg
src/crrc_system_msgs/srv/: ChangeCrrcpilotControl.srv  ChangeOperationMode.srv  OperateMrm.srv
src/crrc_v2x_msgs/: CMakeLists.txt  package.xml
src/crrc_v2x_msgs/msg/: InfrastructureCommand.msg  InfrastructureCommandArray.msg  VirtualTrafficLightStateArray.msg
src/crrc_vehicle_msgs/: CMakeLists.txt  package.xml
src/crrc_vehicle_msgs/msg/: ActuationCommandStamped.msg  ActuationStatusStamped.msg  ShiftStamped.msg
src/crrcpilot_adapi_v1_msgs/: CMakeLists.txt  README.md  package.xml
src/crrcpilot_adapi_version_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/crrcpilot_auto_geometry_msgs/: CMakeLists.txt  package.xml
src/crrcpilot_auto_geometry_msgs/msg/: Complex32.idl  Quaternion32.idl  RelativePositionWithCovarianceStamped.idl
src/crrcpilot_common_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/crrcpilot_control_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/crrcpilot_internal_msgs/: CHANGELOG.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  package.xml
src/crrcpilot_map_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/crrcpilot_perception_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/crrcpilot_perception_msgs/msg/: TrafficLightGroup.msg  TrafficLightGroupArray.msg  TrafficSignal.msg  TrafficSignalArray.msg
src/crrcpilot_planning_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/crrcpilot_sensing_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/crrcpilot_system_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/crrcpilot_vehicle_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/departure_check_msgs/: CMakeLists.txt  package.xml
src/gnss_msgs/: CMakeLists.txt  package.xml
src/install/: local_setup.sh  setup.sh
src/lidar_monitor_msg/: CMakeLists.txt  package.xml
src/lidar_monitor_msg/msg/: LidarMonitor.msg
src/msg_aeb/: CMakeLists.txt  package.xml
src/msg_aeb/msg/: AebPathPoint.msg
src/msg_common/: CMakeLists.txt  package.xml
src/msg_info_router/: CMakeLists.txt  package.xml
src/msg_info_router/msg/: MsgDecisionState.msg  MsgVState.msg  Time.msg
src/msg_lidar_shape/: CMakeLists.txt  package.xml
src/msg_lidar_shape/msg/: DetectedObject.msg  Waypoint.msg
src/msg_mulit_net/: CMakeLists.txt  package.xml
src/msg_obj/: CMakeLists.txt  package.xml
src/msg_obj/msg/: Obj.msg  ObjTemp.msg
src/msg_v_state/: CMakeLists.txt  package.xml
src/shm_msgs/: CMakeLists.txt  package.xml
(+101 files in other folders)
