<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crrc_auto_msgs_converter</name>
  <version>0.0.0</version>
  <description>The crrc_auto_msgs_converter package</description>
  <maintainer email="isamu.takagi@crrc.jp">Takagi, Isamu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>crrcpilot_perception_msgs</depend>
  <depend>crrcpilot_planning_msgs</depend>
  <depend>crrcpilot_system_msgs</depend>
  <depend>crrcpilot_vehicle_msgs</depend>
  <depend>crrc_perception_msgs</depend>
  <depend>crrc_planning_msgs</depend>
  <depend>crrc_system_msgs</depend>
  <depend>crrc_vehicle_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
