<?xml version="1.0"?>
<package format="3">
  <name>msg_aeb</name>
  <version>1.0.0</version>
  <description>The msg_aeb package</description>
  <maintainer email="dhl@todo.todo">dhl</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>


  <exec_depend>rosidl_default_runtime</exec_depend>



  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

