<?xml version="1.0"?>
<package format="3">
  <name>msg_lidar_shape</name>
  <version>0.0.0</version>
  <description>The msg_lidar_shape package</description>
  <maintainer email="dhl@todo.todo">dhl</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>

  </export>
</package>
